chore: refactor build-logic